--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,14 @@ dependencies:
   app_settings: ^4.2.0
   black_cat_lib:
     git: https://github.com/BlackCatDev-IO/black_cat_dev_library
+  bloc_test: ^9.1.3
+  build_runner: ^2.4.6
   cached_network_image: ^3.2.3
   charcode: ^1.2.0
   cupertino_icons: ^1.0.2
   dart_date: ^1.2.2
-  device_info_plus: ^9.0.1
-  dio: ^5.1.2
+  device_info_plus: ^9.0.2
+  dio: ^5.3.0
   enum_to_string: ^2.0.1
   environment_config: ^3.1.0
   equatable: ^2.0.5
@@ -31,48 +33,42 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_email_sender: ^5.1.0
   flutter_keyboard_visibility: ^5.4.1
-  flutter_native_splash: ^2.3.0
-  freezed: ^2.3.4
-  freezed_annotation: ^2.2.0
+  flutter_native_splash: ^2.3.1
+  freezed: ^2.4.1
+  freezed_annotation: ^2.4.1
   geocoding: ^2.0.5
   geolocator: ^9.0.2
   get_it: ^7.6.0
   google_mobile_ads: ^3.0.0
   hexcolor: ^3.0.1
-  hydrated_bloc: ^9.1.1
+  http_mock_adapter: ^0.4.4
+  hydrated_bloc: ^9.1.2
   image_picker: ^0.8.7+5
   in_app_purchase: ^3.1.7
   internet_connection_checker: ^1.0.0+1
   intl: ^0.18.1
   iphone_has_notch: ^1.0.0
+  json_annotation: ^4.8.1
   lat_lng_to_timezone: ^0.2.0
   loading_animation_widget: ^1.2.0+4
-  location:
-    git:
-      url: https://github.com/781flyingdutchman/flutterlocation.git
-      ref: V4
-      path: packages/location
+  location: ^5.0.0
   mixpanel_flutter: ^2.0.0
   nil: ^1.1.1
-  package_info_plus: ^4.0.1
+  package_info_plus: ^4.0.2
   path_provider: ^2.0.15
   path_provider_platform_interface: ^2.0.1
-  permission_handler: ^10.2.0
+  permission_handler: ^10.4.3
   plugin_platform_interface: ^2.0.2
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.8
   sentry_flutter: ^7.8.0
   timezone: ^0.9.2
-  url_launcher: ^6.1.11
+  url_launcher: ^6.1.12
   uuid: ^3.0.6
 
 dev_dependencies:
-  bloc_test: ^9.1.0
-  build_runner: ^2.1.7
   flutter_test:
     sdk: flutter
-  http_mock_adapter: ^0.4.2
-  json_annotation: ^4.7.0
   json_serializable: ^6.5.4
   meta: ^1.7.0
   mocktail: ^0.3.0
