--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Epic Weather App
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.1+48
+version: 1.1.2+49
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -26,6 +26,7 @@ dependencies:
   enum_to_string: ^2.0.1
   environment_config: ^3.1.0
   equatable: ^2.0.5
+  firebase_analytics: ^10.4.4
   firebase_core: ^2.15.0
   firebase_storage: ^11.2.5
   flat_buffers: ^2.0.5
