--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -75,8 +75,12 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data
-    android:name="com.google.android.gms.ads.APPLICATION_ID"
-    android:value="ca-app-pub-7719673046691615~1691373504"/>
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7719673046691615~1691373504"/>
+    	  <meta-data android:name="com.posthog.posthog.API_KEY" android:value="phc_Q69W8OvPOq4g1gEVvJSmtFSVCFNfAsonXLUdN9cFzRQ" />
+	<meta-data android:name="com.posthog.posthog.POSTHOG_HOST" android:value="https://app.posthog.com" />
+	<meta-data android:name="com.posthog.posthog.TRACK_APPLICATION_LIFECYCLE_EVENTS" android:value="false" />
+	<meta-data android:name="com.posthog.posthog.DEBUG" android:value="false" />
    
     </application>
 </manifest>
