--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   path_provider_platform_interface: ^2.0.1
   permission_handler: ^10.4.3
   plugin_platform_interface: ^2.0.2
+  posthog_flutter: ^3.1.0
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.8
   sentry_flutter: ^7.8.0
