--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.5.0+53
 
 environment:
-  sdk: ">=3.1.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   app_settings: ^4.2.0
@@ -40,6 +40,7 @@ dependencies:
   flutter_email_sender: ^5.1.0
   flutter_keyboard_visibility: ^5.4.1
   flutter_native_splash: ^2.3.1
+  flutter_svg: ^2.0.9
   freezed: ^2.4.1
   freezed_annotation: ^2.4.1
   geocoding: ^2.0.5
