--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   dart_date: ^1.2.2
   dart_jsonwebtoken: ^2.8.2
-  dart_mappable: ^3.1.2
+  dart_mappable: 4.2.1
   device_info_plus: ^9.0.2
   device_preview: ^1.1.0
   dio: ^5.3.0
   enum_to_string: ^2.0.1
   environment_config: ^3.1.0
   equatable: ^2.0.5
-  firebase_analytics: ^10.4.5
-  firebase_core: ^2.15.0
-  firebase_storage: ^11.2.5
+  firebase_analytics: ^10.8.9
+  firebase_core: ^2.27.0
+  firebase_storage: ^11.6.9
   fl_chart: ^0.63.0
   flat_buffers: ^2.0.5
   flutter:
@@ -76,7 +76,7 @@ dependencies:
   uuid: ^3.0.6
 
 dev_dependencies:
-  dart_mappable_builder: ^3.1.1
+  dart_mappable_builder: 4.2.1
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
