--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.8
   sentry_flutter: ^7.18.0
+  talker_flutter: ^4.1.2
   timezone: ^0.9.2
   upgrader: ^8.0.0
   url_launcher: ^6.1.12
