--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,52 +21,48 @@ dependencies:
   charcode: ^1.2.0
   country_codes: ^2.2.0
   cupertino_icons: ^1.0.2
-  dart_date: ^1.2.2
   dart_jsonwebtoken: ^2.14.0
   dart_mappable: ^4.2.2
-  device_info_plus: ^9.0.2
-  device_preview: ^1.1.0
+  device_info_plus: ^10.1.0
   dio: ^5.3.0
   enum_to_string: ^2.0.1
   environment_config: ^3.1.0
   equatable: ^2.0.5
-  flat_buffers: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
-  flutter_email_sender: ^5.1.0
+  flutter_email_sender: ^6.0.3
   flutter_keyboard_visibility: ^5.4.1
   flutter_native_splash: ^2.4.0
   flutter_svg: ^2.0.9
   geocoding: ^3.0.0
   geolocator: ^11.0.0
   get_it: ^7.6.9
-  google_mobile_ads: ^3.0.0
+  google_mobile_ads: ^5.0.0
   hexcolor: ^3.0.1
-  http_mock_adapter: ^0.4.4
+  http_mock_adapter: ^0.6.1
   hydrated_bloc: ^9.1.5
-  image_picker: ^0.8.7+5
+  image_picker: ^1.1.1
   in_app_purchase: ^3.1.7
   internet_connection_checker_plus: ^2.0.0
   intl: ^0.18.1
-  iphone_has_notch: ^1.0.0
   lat_lng_to_timezone: ^0.2.0
   loading_animation_widget: ^1.2.0+4
-  location: ^5.0.0
-  mixpanel_flutter: ^2.0.0
-  package_info_plus: ^4.0.2
+  location: ^6.0.1
+  mixpanel_flutter: ^2.2.0
+  package_info_plus: ^8.0.0
   path_provider: ^2.1.3
   path_provider_platform_interface: ^2.0.1
-  permission_handler: ^10.4.3
+  permission_handler: ^11.3.1
   plugin_platform_interface: ^2.0.2
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.8
-  sentry_flutter: ^7.19.0
+  sentry_flutter: ^8.1.0
   talker_flutter: ^4.1.2
   timezone: ^0.9.2
   upgrader: ^10.2.0
   url_launcher: ^6.1.12
-  uuid: ^3.0.6
+  uuid: ^4.4.0
 
 dev_dependencies:
   dart_mappable_builder: ^4.2.3
