--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   image_picker: ^1.1.1
   in_app_purchase: ^3.1.7
   internet_connection_checker_plus: ^2.0.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   lat_lng_to_timezone: ^0.2.0
   loading_animation_widget: ^1.2.0+4
   location: ^6.0.1
@@ -68,8 +68,8 @@ dev_dependencies:
   dart_mappable_builder: ^4.2.3
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  very_good_analysis: ^4.0.0+1
+  mocktail: ^1.0.3
+  very_good_analysis: ^5.0.1
 
 flutter_native_splash:
   background_image: "assets/images/earth_from_space_with_logo.png"
