--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,7 @@ linter:
   rules:
     public_member_api_docs: false
     no_default_cases: false
+    lines_longer_than_80_chars: false
 
 analyzer:
   errors:
