--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   flutter_email_sender: ^6.0.3
   flutter_keyboard_visibility: ^5.4.1
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.4.0
   flutter_svg: ^2.0.9
   geocoding: ^3.0.0
@@ -45,7 +47,7 @@ dependencies:
   image_picker: ^1.1.1
   in_app_purchase: ^3.1.7
   internet_connection_checker_plus: ^2.0.0
-  intl: ^0.19.0
+  intl: ^0.18.1
   lat_lng_to_timezone: ^0.2.0
   loading_animation_widget: ^1.2.0+4
   location: ^6.0.1
