--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   responsive_framework: ^0.2.0
   scrollable_positioned_list: ^0.3.8
   sentry_flutter: ^8.1.0
+  shorebird_code_push: ^1.1.5
   talker_flutter: ^4.1.2
   timezone: ^0.9.2
   upgrader: ^10.2.0
